# BEM_TimeDomain

./: .gitignore  CMakeLists.txt  README.md
bem/core/: BEM.hpp  BEM_BoundaryValues.hpp  BEM_WaveGenerator.hpp  BEM_calculateVelocities.hpp  BEM_collision_settings.hpp  BEM_debug_helpers.cpp  BEM_debug_helpers.hpp  BEM_field_mapper.hpp  BEM_field_provider.hpp  BEM_full_interpolation.hpp  BEM_geometry_projector.hpp  BEM_geometry_provider.hpp  BEM_geometry_repair.hpp  BEM_inputfile_reader.cpp  BEM_inputfile_reader.hpp  BEM_internal_flow.cpp  BEM_internal_flow.hpp  BEM_legacy_globals.hpp  BEM_mesh_adjustment.hpp  BEM_midpoint_debug.hpp  BEM_node_face_state.hpp  BEM_output_data.hpp  BEM_output_info.hpp  BEM_pre_bvp_consistency.hpp  BEM_pressure_detachment.hpp  BEM_reference_state.hpp  BEM_setBoundaryTypes.hpp  BEM_snapshot.hpp  BEM_solveBVP.hpp  BEM_solveBVP_GMRES_FMM.hpp  BEM_solveBVP_LU.hpp  BEM_waterline_geometry_provider.hpp  Hadzic2005.hpp  OutputJSON.cpp  OutputJSON.hpp  OutputParaview.cpp  OutputParaview.hpp  VPM.hpp
bem/time_domain/: BEM_checkpoint.cpp  BEM_checkpoint.hpp  BEM_collision.cpp  BEM_collision.hpp  BEM_initial_conditions.cpp  BEM_initial_conditions.hpp  BEM_mesh_relaxation.cpp  BEM_mesh_relaxation.hpp  BEM_penetration.cpp  BEM_penetration.hpp  BEM_remesh_common.hpp  BEM_remesh_debug_output.hpp  BEM_remesh_global_passes.cpp  BEM_remesh_lightgbm.hpp  BEM_remesh_local_patch.cpp  BEM_remesh_logging.hpp  BEM_remesh_main.cpp  BEM_remesh_main.hpp  BEM_remesh_scenario_engine.cpp  BEM_remesh_scenario_engine.hpp  BEM_remesh_trial_geometry_inputs.hpp  BEM_rk_update.cpp  BEM_rk_update.hpp  BEM_time_domain_types.hpp  BEM_time_step_control.cpp  BEM_time_step_control.hpp  BEM_topology_modifier.hpp  REMESH_ARCHITECTURE.md  main_time_domain.cpp  計画.md
examples/goring1979/output/: BEM_checkpoint.hpp  BEM_time_step_control.hpp  main_time_domain.cpp  tank_init.vtu  water.pvd  water_collapse_candidate.pvd  water_edges.pvd  water_init.vtu  water_remeshed.pvd  water_remeshed_0.vtu  water_split_candidate.pvd  water_split_candidate_0.vtu  wavemaker_init.vtu
